-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u40, 9
-
Component/s: core-svc
-
b35
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083082 | emb-9 | Dmitriy Samersoff | P3 | Resolved | Fixed | b35 |
'jstack -F -m -l' can assert when executed by the Aurora framework:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\jprt\T\P1\185951.ctornqvi\s\src\share\vm\runtime/jniHandles.hpp:192), pid=1101360, tid=1115920
# assert(handle != NULL) failed: JNI handle should not be null
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b24) (build 1.9.0-ea-fastdebug-b24)
# Java VM: Java HotSpot(TM) Client VM (1.9.0-fastdebug-internal-201407311859.ctornqvi.hs-rt mixed mode, sharing windows-x86 )
# Core dump written. Default location: C:\local\aurora\sandbox\results\hs_err_pid1101360.mdmp
--------------- T H R E A D ---------------
Current thread (0x004ce800): JavaThread "main" [_thread_in_vm, id=1115920, stack(0x00920000,0x00970000)]
Stack: [0x00920000,0x00970000], sp=0x0096eac0, free space=314k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x2b5cb5] VMError::report_and_die+0x405;; ?report_and_die@VMError@@QAEXXZ+0x405
V [jvm.dll+0x2aa825] report_vm_error+0x45;; ?report_vm_error@@YAXPBDH00@Z+0x45
V [jvm.dll+0x24574] JNIHandles::resolve_non_null+0x24;; ?resolve_non_null@JNIHandles@@SAPAVoopDesc@@PAV_jobject@@@Z+0x24
V [jvm.dll+0x16fe74] jni_GetStringUTFChars+0x1f4;; _jni_GetStringUTFChars@12+0x1f4
C [sawindbg.dll+0x12d0e] JNIEnv_::GetStringUTFChars+0x3e;; ?GetStringUTFChars@JNIEnv_@@QAEPBDPAV_jstring@@PAE@Z+0x3e
C [sawindbg.dll+0x12f51] setImageAndSymbolPath+0x71;; ??BAutoJavaString@@QAEPBDXZ+0xb1
C [sawindbg.dll+0x1442b] attachToProcess+0x2b;; Java_sun_jvm_hotspot_debugger_windbg_WindbgDebuggerLocal_attach0(int0_t)@12+0xeb
C [sawindbg.dll+0x14388] Java_sun_jvm_hotspot_debugger_windbg_WindbgDebuggerLocal_attach0(int0_t)+0x48;; Java_sun_jvm_hotspot_debugger_windbg_WindbgDebuggerLocal_attach0(int0_t)@12+0x48
j sun.jvm.hotspot.debugger.windbg.WindbgDebuggerLocal.attach0(I)V+0
j sun.jvm.hotspot.debugger.windbg.WindbgDebuggerLocal.attach(I)V+6
j sun.jvm.hotspot.HotSpotAgent.attachDebugger()V+15
j sun.jvm.hotspot.HotSpotAgent.setupDebuggerWin32()V+120
j sun.jvm.hotspot.HotSpotAgent.setupDebugger()V+99
j sun.jvm.hotspot.HotSpotAgent.go()V+1
j sun.jvm.hotspot.HotSpotAgent.attach(I)V+33
j sun.jvm.hotspot.tools.Tool.start([Ljava/lang/String;)I+231
j sun.jvm.hotspot.tools.Tool.execute([Ljava/lang/String;)V+4
j sun.jvm.hotspot.tools.JStack.main([Ljava/lang/String;)V+117
v ~StubRoutines::call_stub
V [jvm.dll+0x23b8a4] JavaCalls::call_helper+0x3c4;; ?call_helper@JavaCalls@@CAXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x3c4
V [jvm.dll+0x35aa02] os::os_exception_wrapper+0xa2;; ?os_exception_wrapper@os@@SAXP6AXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z0123@Z+0xa2
V [jvm.dll+0x23b968] JavaCalls::call+0x48;; ?call@JavaCalls@@SAXPAVJavaValue@@VmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x48
V [jvm.dll+0x24e266] Reflection::invoke+0x986;; ?invoke@Reflection@@CAPAVoopDesc@@VinstanceKlassHandle@@VmethodHandle@@VHandle@@_NVobjArrayHandle@@W4BasicType@@43PAVThread@@@Z+0x986
V [jvm.dll+0x24e523] Reflection::invoke_method+0x143;; ?invoke_method@Reflection@@SAPAVoopDesc@@PAV2@VHandle@@VobjArrayHandle@@PAVThread@@@Z+0x143
V [jvm.dll+0x1b6b45] JVM_InvokeMethod+0x235;; _JVM_InvokeMethod@16+0x235
C [java.dll+0x3c05]
j sun.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100
j sun.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+56
j sun.tools.jstack.JStack.runJStackTool(ZZ[Ljava/lang/String;)V+70
j sun.tools.jstack.JStack.main([Ljava/lang/String;)V+223
v ~StubRoutines::call_stub
V [jvm.dll+0x23b8a4] JavaCalls::call_helper+0x3c4;; ?call_helper@JavaCalls@@CAXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x3c4
V [jvm.dll+0x35aa02] os::os_exception_wrapper+0xa2;; ?os_exception_wrapper@os@@SAXP6AXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z0123@Z+0xa2
V [jvm.dll+0x23b968] JavaCalls::call+0x48;; ?call@JavaCalls@@SAXPAVJavaValue@@VmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x48
V [jvm.dll+0x177549] jni_invoke_static+0x1b9;; ?jni_invoke_static@@YAXPAUJNIEnv_@@PAVJavaValue@@PAV_jobject@@W4JNICallType@@PAU_jmethodID@@PAVJNI_ArgumentPusher@@PAVThread@@@Z+0x1b9
V [jvm.dll+0x189c1b] jni_CallStaticVoidMethod+0x25b;; _jni_CallStaticVoidMethod+0x25b
C [jli.dll+0x43ff]
C [jli.dll+0xa89a]
C [jli.dll+0xa924]
C [kernel32.dll+0x1338a]
C [ntdll.dll+0x39f72]
C [ntdll.dll+0x39f45]
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\jprt\T\P1\185951.ctornqvi\s\src\share\vm\runtime/jniHandles.hpp:192), pid=1101360, tid=1115920
# assert(handle != NULL) failed: JNI handle should not be null
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b24) (build 1.9.0-ea-fastdebug-b24)
# Java VM: Java HotSpot(TM) Client VM (1.9.0-fastdebug-internal-201407311859.ctornqvi.hs-rt mixed mode, sharing windows-x86 )
# Core dump written. Default location: C:\local\aurora\sandbox\results\hs_err_pid1101360.mdmp
--------------- T H R E A D ---------------
Current thread (0x004ce800): JavaThread "main" [_thread_in_vm, id=1115920, stack(0x00920000,0x00970000)]
Stack: [0x00920000,0x00970000], sp=0x0096eac0, free space=314k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x2b5cb5] VMError::report_and_die+0x405;; ?report_and_die@VMError@@QAEXXZ+0x405
V [jvm.dll+0x2aa825] report_vm_error+0x45;; ?report_vm_error@@YAXPBDH00@Z+0x45
V [jvm.dll+0x24574] JNIHandles::resolve_non_null+0x24;; ?resolve_non_null@JNIHandles@@SAPAVoopDesc@@PAV_jobject@@@Z+0x24
V [jvm.dll+0x16fe74] jni_GetStringUTFChars+0x1f4;; _jni_GetStringUTFChars@12+0x1f4
C [sawindbg.dll+0x12d0e] JNIEnv_::GetStringUTFChars+0x3e;; ?GetStringUTFChars@JNIEnv_@@QAEPBDPAV_jstring@@PAE@Z+0x3e
C [sawindbg.dll+0x12f51] setImageAndSymbolPath+0x71;; ??BAutoJavaString@@QAEPBDXZ+0xb1
C [sawindbg.dll+0x1442b] attachToProcess+0x2b;; Java_sun_jvm_hotspot_debugger_windbg_WindbgDebuggerLocal_attach0(int0_t)@12+0xeb
C [sawindbg.dll+0x14388] Java_sun_jvm_hotspot_debugger_windbg_WindbgDebuggerLocal_attach0(int0_t)+0x48;; Java_sun_jvm_hotspot_debugger_windbg_WindbgDebuggerLocal_attach0(int0_t)@12+0x48
j sun.jvm.hotspot.debugger.windbg.WindbgDebuggerLocal.attach0(I)V+0
j sun.jvm.hotspot.debugger.windbg.WindbgDebuggerLocal.attach(I)V+6
j sun.jvm.hotspot.HotSpotAgent.attachDebugger()V+15
j sun.jvm.hotspot.HotSpotAgent.setupDebuggerWin32()V+120
j sun.jvm.hotspot.HotSpotAgent.setupDebugger()V+99
j sun.jvm.hotspot.HotSpotAgent.go()V+1
j sun.jvm.hotspot.HotSpotAgent.attach(I)V+33
j sun.jvm.hotspot.tools.Tool.start([Ljava/lang/String;)I+231
j sun.jvm.hotspot.tools.Tool.execute([Ljava/lang/String;)V+4
j sun.jvm.hotspot.tools.JStack.main([Ljava/lang/String;)V+117
v ~StubRoutines::call_stub
V [jvm.dll+0x23b8a4] JavaCalls::call_helper+0x3c4;; ?call_helper@JavaCalls@@CAXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x3c4
V [jvm.dll+0x35aa02] os::os_exception_wrapper+0xa2;; ?os_exception_wrapper@os@@SAXP6AXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z0123@Z+0xa2
V [jvm.dll+0x23b968] JavaCalls::call+0x48;; ?call@JavaCalls@@SAXPAVJavaValue@@VmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x48
V [jvm.dll+0x24e266] Reflection::invoke+0x986;; ?invoke@Reflection@@CAPAVoopDesc@@VinstanceKlassHandle@@VmethodHandle@@VHandle@@_NVobjArrayHandle@@W4BasicType@@43PAVThread@@@Z+0x986
V [jvm.dll+0x24e523] Reflection::invoke_method+0x143;; ?invoke_method@Reflection@@SAPAVoopDesc@@PAV2@VHandle@@VobjArrayHandle@@PAVThread@@@Z+0x143
V [jvm.dll+0x1b6b45] JVM_InvokeMethod+0x235;; _JVM_InvokeMethod@16+0x235
C [java.dll+0x3c05]
j sun.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100
j sun.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+56
j sun.tools.jstack.JStack.runJStackTool(ZZ[Ljava/lang/String;)V+70
j sun.tools.jstack.JStack.main([Ljava/lang/String;)V+223
v ~StubRoutines::call_stub
V [jvm.dll+0x23b8a4] JavaCalls::call_helper+0x3c4;; ?call_helper@JavaCalls@@CAXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x3c4
V [jvm.dll+0x35aa02] os::os_exception_wrapper+0xa2;; ?os_exception_wrapper@os@@SAXP6AXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z0123@Z+0xa2
V [jvm.dll+0x23b968] JavaCalls::call+0x48;; ?call@JavaCalls@@SAXPAVJavaValue@@VmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x48
V [jvm.dll+0x177549] jni_invoke_static+0x1b9;; ?jni_invoke_static@@YAXPAUJNIEnv_@@PAVJavaValue@@PAV_jobject@@W4JNICallType@@PAU_jmethodID@@PAVJNI_ArgumentPusher@@PAVThread@@@Z+0x1b9
V [jvm.dll+0x189c1b] jni_CallStaticVoidMethod+0x25b;; _jni_CallStaticVoidMethod+0x25b
C [jli.dll+0x43ff]
C [jli.dll+0xa89a]
C [jli.dll+0xa924]
C [kernel32.dll+0x1338a]
C [ntdll.dll+0x39f72]
C [ntdll.dll+0x39f45]
- backported by
-
JDK-8083082 jstack crash: assert(handle != NULL) failed: JNI handle should not be null
-
- Resolved
-
- relates to
-
JDK-6749729 vm crashes due to bad jni handle passed from backend when monitor events are enabled.
-
- Closed
-
-
JDK-8059117 Jstack not able to get static object field
-
- Closed
-