8054194: jstack crash: assert(handle != NULL) failed: JNI handle should not be null

Add better error check to sa to avoid secondary crash

Reviewed-by: sla, jbachorik, sspitsyn